Add end-point and CLI command for deleting an asset when unreferenced